<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/NameImageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/NameTextViewEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NameTextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/PreparationImageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PreparationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Preparation" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/PreparationButtonMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="-" />

                <TextView
                    android:id="@+id/PreparationTextViewEditText"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PreparationTextView" />


                <Button
                    android:id="@+id/PreparationButtonPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="+" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/WorkImageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/WorkTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Work" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/WorkButtonMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="-" />

                <TextView
                    android:id="@+id/WorkTextViewEditText"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/WorkTextView" />

                <Button
                    android:id="@+id/WorkButtonPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="+" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/RestImageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RestTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rest" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/RestButtonMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="-" />

                <TextView
                    android:id="@+id/RestTextViewEditText"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RestTextView" />

                <Button
                    android:id="@+id/RestButtonPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/CycleImageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CycleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cycle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/CycleButtonMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="-" />

                <TextView
                    android:id="@+id/CycleTextViewEditText"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CycleTextView" />

                <Button
                    android:id="@+id/CycleButtonPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/SetImageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SetTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Set" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/SetButtonMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="-" />

                <TextView
                    android:id="@+id/SetTextViewEditText"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SetTextView" />

                <Button
                    android:id="@+id/SetButtonPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/TimeOfRestBetweenSetImageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TimeOfRestBetweenSetTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TimeOfRestBetweenSet" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/TimeOfRestBetweenSetButtonMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="-" />

                <TextView
                    android:id="@+id/TimeOfRestBetweenSetTextViewEditText"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TimeOfRestBetweenSetTextView" />

                <Button
                    android:id="@+id/TimeOfRestBetweenSetButtonPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/TimeOfFinalRestImageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TimeOfFinalRestTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TimeOfFinalRest" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/TimeOfFinalRestButtonMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="-" />

                <TextView
                    android:id="@+id/TimeOfFinalRestTextViewEditText"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TimeOfFinalRestTextView" />

                <Button
                    android:id="@+id/TimeOfFinalRestButtonPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/oval_button"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <com.divyanshu.colorseekbar.ColorSeekBar
        android:id="@+id/color_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/CreateWorkoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateButton" />
</LinearLayout>